added translated text in placeholders

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -49,7 +49,7 @@
           </span>
 
           <div class="wrap-input100 validate-input">
-            <input class="input100" type="text" id="phone-number" name="phone-number" placeholder="PhoneNumber">
+            <input class="input100" type="text" id="phone-number" name="phone-number" placeholder="{{sign_up_list[1]}}">
             <span class="focus-input100"></span>
             <span class="symbol-input100">
               <i class="fa fa-phone" aria-hidden="true" for="phone-number"></i>
@@ -57,7 +57,7 @@
           </div>
 
           <div class="wrap-input100 validate-input" data-validate="Name is required">
-            <input class="input100" type="text" id="name" name="name" placeholder="Full Name">
+            <input class="input100" type="text" id="name" name="name" placeholder="{{sign_up_list[2]}}">
             <span class="focus-input100"></span>
             <span class="symbol-input100">
               <i class="fa fa-user" aria-hidden="true" for="name"></i>
@@ -67,7 +67,7 @@
           <div class="col-md-12">
             <div class="container-login100-form-btn">
               <button type="submit" class="login100-form-btn" id="sign-in-button" name="sign-in-button" value="sign-in">
-                {{sign_up_list[1]}}
+                {{sign_up_list[3]}}
               </button>
             </div>
           </form>
@@ -75,7 +75,7 @@
             <input type="hidden" name="lang" value={{lang}}>
             <div class="container-login100-form-btn">
               <button type="submit" class="login100-form-btn" id="sign-in-button" name="sign-in-button" value="log-in">
-                {{sign_up_list[2]}}
+                {{sign_up_list[4]}}
               </button>
           </div>
           </form>
