added translated text in placeholders

--- a/templates/set_password.html
+++ b/templates/set_password.html
@@ -42,7 +42,7 @@
             {{password_list[0]}}
           </span>
           <div class="wrap-input100 validate-input">
-            <input class="input100" type="password" name="password" placeholder={{password_list[1]}}>
+            <input class="input100" type="password" name="password" placeholder="{{password_list[1]}}">
             <span class="focus-input100"></span>
             <span class="symbol-input100">
               <i class="fa fa-user" aria-hidden="true" for="password"></i>
@@ -53,7 +53,7 @@
           <input type="hidden" name="name" value="{{name}}">
           <br>
           <div class="wrap-input100 validate-input">
-            <input class="input100" type="password" name="password-confirm" placeholder={{password_list[2]}}>
+            <input class="input100" type="password" name="password-confirm" placeholder="{{password_list[2]}}">
             <span class="focus-input100"></span>
             <span class="symbol-input100">
               <i class="fa fa-user" aria-hidden="true" for="password-confirm"></i>
