--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8787,8 +8787,8 @@ h1, h2, h3, h4, h5,
           color: #fff;
           line-height: 1.1;
           font-weight: 900;
-          position: relative; 
-          text-shadow: 
+          position: relative; }
+          /* text-shadow: 
             -1px -1px 0 black,
             1px -1px 0 black,
             -1px 1px 0 black,
@@ -8796,7 +8796,7 @@ h1, h2, h3, h4, h5,
             -2px 0 0 black,
             2px 0 0 black,
             0 2px 0 black,
-            0 -2px 0 black;}
+            0 -2px 0 black;} */
         .owl-carousel.home-slider .slider-item .slider-text h1 span {
           color: #000000;
           display: block; }
@@ -9432,6 +9432,17 @@ textarea.form-control {
   font-size: 12px;
   font-weight: 600;
   letter-spacing: 2px;
+  text-transform: uppercase;
+  position: relative; }
+
+.heading-section .myheading {
+  font-size: 30px;
+  margin-bottom: 0;
+  color: #5a5859;
+  font-size: 30px;
+  font-weight: 500;
+  letter-spacing: 2px;
+  font-family: anton;
   text-transform: uppercase;
   position: relative; }
 
@@ -10747,7 +10758,7 @@ iframe {
     background-position: center center;
     position: relative;
     padding: 15em 0;
-    background: #78d5ef; }
+    background: #e9ebeb; }
   .ftco-section-parallax .parallax-img-2 {
     background-size: cover;
     background-repeat: no-repeat;
@@ -10755,19 +10766,19 @@ iframe {
     position: relative;
     padding: 15em 0;
     background: #78efd1; }
-  .ftco-section-parallax .parallax-img-3 {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    position: relative;
-    padding: 15em 0;
-    background: #464a4e; }
-    .ftco-section-parallax .parallax-img.parallax-img-2.parallax-img-3 {
+    .ftco-section-parallax .parallax-img .img{
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
+      position: relative;
+      padding: 15em 0; }
+    .ftco-section-parallax .parallax-img.parallax-img-2 {
       background: #ee76ad; }
 
 
 
 .block-3 .text, .block-3 .image {
+  height: 120%;
   width: 100%;
   padding: 10% 7%;
   display: block; }
@@ -10803,16 +10814,8 @@ iframe {
 
 .blog-entry-2 {
   background: #fff;
-  opacity: .5;
-  -webkit-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
-  -ms-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
-  -o-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
-  border: 1px solid #f7f7f7; }
-  .blog-entry-2:hover{
-  background: #fff;
-  opacity: 1;
+  border-radius: 25px;
+  transition: transform .2s;
   -webkit-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
   -ms-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
@@ -10825,6 +10828,8 @@ iframe {
   @media (max-width: 767.98px) {
     .blog-entry-2 {
       margin-bottom: 30px; } }
+  .blog-entry-2:hover{
+  transform: scale(1.1); }
   .blog-entry-2 .text {
     position: relative;
     border-top: 0;
@@ -10876,8 +10881,181 @@ iframe {
 .block-20-1 {
   overflow: hidden;
   background-size: cover;
+  border-top-right-radius: 25px;
+  border-top-left-radius: 25px;
   background-repeat: no-repeat;
   background-position: center center;
   height: 350px;
   position: relative;
   display: block; }
+
+
+
+body {
+  margin: 0;
+  font-family: "Lato", sans-serif;
+}
+
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 300px;
+  background-color: #f1f1f1;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+.sidebar a {
+  display: block;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+}
+
+.sidebar a.active {
+  background-color: #af3d29;
+  color: white;
+}
+
+.sidebar a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
+
+div.content {
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 1000px;
+}
+
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar a {float: left;}
+  div.content {margin-left: 0;}
+}
+
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
+}
+
+/*  */
+
+body {
+  font-family: 'Lato', sans-serif;
+}
+
+.overlay {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.overlay-content p {
+  text-align: left;
+  color: white;
+  font-size: 22px;
+}
+
+.overlay-content a {
+  padding: 5px;
+  text-decoration: none;
+  font-size: 18px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+  position: relative;
+  left: 50%;
+}
+
+.overlay-content a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+/* .overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+} */
+
+.overlay .closebtn {
+  position: absolute;
+  top: 14%;
+  right: 45px;
+  font-size: 40px;
+}
+
+.overlay .profileimage {
+  position: relative;
+  margin-top: 30px;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  padding: 5px;
+}
+
+@media screen and (max-width: 418px) {
+  .overlay-content p {
+  text-align: left;
+  color: white;
+  font-size: 12px;
+  }
+
+  .overlay .profileimage {
+  margin-top: 10px;
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  padding: 2px;
+  }
+
+  .overlay .closebtn {
+  font-size: 30px;
+  top: 15%;
+  left: 90%;
+  }
+
+  .overlay .closebtn {
+  position: absolute;
+  font-size: 30px;
+  top: 14%;
+  left: 5%;
+  }
+
+  .overlay-content a {
+  padding: 2px;
+  font-style: anton;
+  font-size: 10px;
+  transition: 0.3s;
+  position: relative;
+  left: 30%;
+  }
+}
