links added in footer

--- a/pro_farm/templates/index.html
+++ b/pro_farm/templates/index.html
@@ -26,24 +26,25 @@
 
     <!-- Profile Section Started -->
     <div id="myNav" class="overlay">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><<</a>
-        <div class="container mt-5 pt-5">
-            <div class="row mt-5 pt-5">
-                <div class="col-md-6 col-lg-6 ftco-animate">
-                    <img src="../static/images/edited_vali4.png" class="profileimage" alt="">
-                </div>
-                <div class="col-md-6 col-lg-6 ftco-animate">
-                    <div class="overlay-content ml-1 pl-1">
-                        <p>Name - ooiiii</p>
-                        <p>Number - 1234567890</p>
-                        <p>Status - Farmer</p>
-                        <p>Primary language - english</p>
-                        <p>Location - Ambala, Haryana</p>
-                        <a href="profile.html">Edit Profile</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
+            <<< /a>
+                <div class="container mt-5 pt-5">
+                    <div class="row mt-5 pt-5">
+                        <div class="col-md-6 col-lg-6 ftco-animate">
+                            <img src="../static/images/edited_vali4.png" class="profileimage" alt="">
+                        </div>
+                        <div class="col-md-6 col-lg-6 ftco-animate">
+                            <div class="overlay-content ml-1 pl-1">
+                                <p>Name - ooiiii</p>
+                                <p>Number - 1234567890</p>
+                                <p>Status - Farmer</p>
+                                <p>Primary language - english</p>
+                                <p>Location - Ambala, Haryana</p>
+                                <a href="profile.html">Edit Profile</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
     </div>
     <!-- Profile Section Ended -->
 
@@ -83,15 +84,16 @@
             <div class="slider-item js-fullheight"
                 style="background-image:url(/../farm_app/pro_farm/static/images/D.jpg);">
 
-           
+
 
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
-                                <h1 class="mb-4 navbar-brand" style="font-weight: 500; font-family:Georgia, 'Times New Roman', Times, serif;">Kisan<span
-                                        style="color:#d1002c; display:inline-block;">Tech</span></h1>
+                                <h1 class="mb-4 navbar-brand"
+                                    style="font-weight: 500; font-family:Georgia, 'Times New Roman', Times, serif;">
+                                    Kisan<span style="color:#d1002c; display:inline-block;">Tech</span></h1>
                                 <p style="color: white;"><strong>WELL ROOTED TO NATURE.</strong></p>
                             </div>
                         </div>
@@ -102,7 +104,8 @@
                                     <div class="col-md-3">
                                         <a href="#">
                                             <img src="../static/images/edited_vali4.png"
-                                                style="border-radius: 50%; width: 150px; height: 150px;" onclick="openNav()" alt="">
+                                                style="border-radius: 50%; width: 150px; height: 150px;"
+                                                onclick="openNav()" alt="">
                                         </a>
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
@@ -117,17 +120,17 @@
                 </div>
             </div>
             <div class="slider-item js-fullheight"
-
                 style="background-image:url(/../farm_app/pro_farm/static/images/as.jpg);">
 
-               <div class="overlay"></div>
- 
+                <div class="overlay"></div>
+
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
-                                <h1 class="mb-4 navbar-brand" style="font-weight: 500; font-family:Georgia, 'Times New Roman', Times, serif;">Kisan<span
-                                        style="color:#d1002c; display:inline-block;">Tech</span></h1>
+                                <h1 class="mb-4 navbar-brand"
+                                    style="font-weight: 500; font-family:Georgia, 'Times New Roman', Times, serif;">
+                                    Kisan<span style="color:#d1002c; display:inline-block;">Tech</span></h1>
                                 <p style="color: white;"><strong>WELL ROOTED TO NATURE.</strong></p>
                             </div>
                         </div>
@@ -138,7 +141,8 @@
                                     <div class="col-md-3">
                                         <a href="#">
                                             <img src="../static/images/edited_vali4.png"
-                                                style="border-radius: 50%; width: 150px; height: 150px;" onclick="openNav()" alt="">
+                                                style="border-radius: 50%; width: 150px; height: 150px;"
+                                                onclick="openNav()" alt="">
                                         </a>
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
@@ -155,15 +159,16 @@
             <div class="slider-item js-fullheight"
                 style="background-image:url(/../farm_app/pro_farm/static/images/b3.jpg);">
 
-        
+
 
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
-                                <h1 class="mb-4 navbar-brand" style="font-weight: 500; font-family:Georgia, 'Times New Roman', Times, serif;">Kisan<span
-                                        style="color:#d1002c; display:inline-block;">Tech</span></h1>
+                                <h1 class="mb-4 navbar-brand"
+                                    style="font-weight: 500; font-family:Georgia, 'Times New Roman', Times, serif;">
+                                    Kisan<span style="color:#d1002c; display:inline-block;">Tech</span></h1>
                                 <p style="color: #fff;"><strong>WELL ROOTED TO NATURE.</strong></p>
                             </div>
                         </div>
@@ -174,7 +179,8 @@
                                     <div class="col-md-3">
                                         <a href="#">
                                             <img src="../static/images/edited_vali4.png"
-                                                style="border-radius: 50%; width: 150px; height: 150px;" onclick="openNav()" alt="">
+                                                style="border-radius: 50%; width: 150px; height: 150px;"
+                                                onclick="openNav()" alt="">
                                         </a>
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
@@ -415,14 +421,15 @@
                 target="_blank">Click here
                 to associate with <strong>PM-KISAN-SAMMAN-NIDHI-YOJANA</strong></a>
         </div>
-    
+
         <div>
-            <a href="https://kisansamadhan.com/central-government-schemes/ " target="_blank">Click here to know all details
+            <a href="https://kisansamadhan.com/central-government-schemes/ " target="_blank">Click here to know all
+                details
                 of
                 <strong>CENTRAL-GOVERNMENT-SCHEMES</strong></a>
         </div>
-    
-    
+
+
     </section>
 
 
@@ -436,11 +443,14 @@
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">DEVELOPERS</h2>
-                        <p><strong style="color:#d1002c;"> PRO-CODERS</strong>
-                        <div>Aaditya Singhal </div>
-                        <div>Abhay Dhiman </div>
-                        <div>Ayush Malik </div>
-                        <div>Akshita Sharma </div>
+                        <p><strong style="color:#d1002c;"> PRO-CODERS</strong><br>
+                            <a href=" https://www.linkedin.com/in/aaditya-singhal-a46720192/" target="_blank">Aditya Singhal</a><br>
+                            <a href=" https://www.linkedin.com/in/abhay-dhiman-409378191/" target="_blank">Abhay
+                                Dhiman</a><br>
+                            <a href=" https://www.linkedin.com/in/ayush-malik-2252b7199/" target="_blank">Ayush
+                                Malik</a><br>
+                            <a href="https://www.linkedin.com/in/akshita-sharma-a160121b6/" target="_blank">Akshita Sharma</a>
+
                         </p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
                             <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -470,9 +480,11 @@
                                         href=" https://github.com/Aaditya1978">https://github.com/Aaditya1978</a></a>
                             </li>
                             <li><a href="#" class="py-2 d-block" style=" color: #d1002c;">Abhay Dhiman -<a
-                                        href="  https://github.com/abhaydhiman"> https://github.com/abhaydhiman</a></a></li>
+                                        href="  https://github.com/abhaydhiman"> https://github.com/abhaydhiman</a></a>
+                            </li>
                             <li><a href="#" class="py-2 d-block" style=" color: #d1002c;">Ayush Malik -<a
-                                        href="https://github.com/Ayush-Malik ">https://github.com/Ayush-Malik</a></a></li>
+                                        href="https://github.com/Ayush-Malik ">https://github.com/Ayush-Malik</a></a>
+                            </li>
                             <li><a href="#" class="py-2 d-block" style=" color: #d1002c;">Akshita Sharma - <a
                                         href="https://github.com/akshita-sharma8609 ">https://github.com/akshita-sharma8609</a></a>
                             </li>
@@ -494,7 +506,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
-    
+
                     <p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;
