added selectbox elements for state and city

--- a/templates/set_password.html
+++ b/templates/set_password.html
@@ -20,6 +20,7 @@
   <!--===============================================================================================-->
   <link rel="stylesheet" type="text/css" href="..\static\css\util.css">
   <link rel="stylesheet" type="text/css" href="..\static\css\style.css">
+  <script src="..\static\js\cities.js"></script>
   <!--===============================================================================================-->
   <script src="https://www.gstatic.com/firebasejs/7.19.0/firebase-app.js"></script>
   <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
@@ -59,6 +60,12 @@
               <i class="fa fa-user" aria-hidden="true" for="password-confirm"></i>
             </span>
           </div>
+          <br>
+          <select class="select-css" onchange="print_city('state', this.selectedIndex);" id="sts" name ="stt" required></select>
+          <br>
+          <select class="select-css" id ="state" hidden name="city" required></select>
+          <script language="javascript">print_state("sts");</script>
+          <br>
           <div class="container-login100-form-btn">
             <button type="submit" class="login100-form-btn" name="password-button">{{password_list[3]}}</button>
           </div>
