--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -39,7 +39,7 @@
                         <p>{{t_lis[1]}} - {{name}}</p>
                         <p>{{t_lis[2]}} - {{phone_number}}</p>
                         <p>{{t_lis[3]}} - {{t_lis[4]}}</p>
-                        <p>{{t_lis[5]}} - {{t_lis[6]}}</p>
+                        <p>{{t_lis[5]}} - {{city}}, {{state}}</p>
                         <a href="profile.html">{{t_lis[7]}}</a>
                     </div>
                 </div>
@@ -55,15 +55,15 @@
     <!-- navbar started -->
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
-            <a class="navbar-brand" href="user_home.html">The<span>F</span>armer</a>
+            <a class="navbar-brand" href="#">The<span>F</span>armer</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> {{t_lis[1]}}
             </button>
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a href="user_home.html" class="nav-link">{{t_lis[8]}}</a></li>
-                    <li class="nav-item"><a href="wheather.html" class="nav-link">{{t_lis[9]}}</a></li>
+                    <li class="nav-item active"><a href="{{url_for('user_home_3')}}" class="nav-link">{{t_lis[8]}}</a></li>
+                    <li class="nav-item"><a href="{{url_for('weather')}}" class="nav-link">{{t_lis[9]}}</a></li>
                     <li class="nav-item"><a href="work.html" class="nav-link">{{t_lis[10]}}</a></li>
                     <li class="nav-item"><a href="blog.html" class="nav-link">{{t_lis[11]}}</a></li>
                     <li class="nav-item"><a href="contact.html" class="nav-link">{{t_lis[12]}}</a></li>
@@ -210,16 +210,16 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-md-4 ftco-animate">
                         <div class="blog-entry-2">
-                            <a href="blog-single.html" class="block-20-1"
+                            <a href="{{url_for('weather')}}" class="block-20-1"
                                 style="background-image: url(../static/images/weather2.jpg);">
                             </a>
                             <div class="text p-4 d-block">
                                 <div class="meta mb-3">
-                                    <div><a href="#">{{t_lis[18]}}</a></div>
-                                    <div><a href="#"></a></div>
-                                    <div><a href="#" class="meta-chat"><span class="icon-cloud"></span></a></div>
+                                    <div><a href="{{url_for('weather')}}">{{t_lis[18]}}</a></div>
+                                    <div><a href="{{url_for('weather')}}"></a></div>
+                                    <div><a href="{{url_for('weather')}}" class="meta-chat"><span class="icon-cloud"></span></a></div>
                                 </div>
-                                <h3 class="heading"><a href="#">{{t_lis[19]}}</a></h3>
+                                <h3 class="heading"><a href="{{url_for('weather')}}">{{t_lis[19]}}</a></h3>
                             </div>
                         </div>
                     </div>
@@ -266,7 +266,7 @@
 
 
     <!-- Section where videos are added -->
-    <section class="ftco-section">
+    <section class="ftco-section mt-5 pt-5">
         <div class="container-fluid">
             <div class="row no-gutters justify-content-center mb-5 pb-5">
                 <div class="col-md-7 text-center heading-section ftco-animate">
@@ -428,14 +428,14 @@
                         <h2 class="ftco-heading-2">{{t_lis[56]}}</h2>
                         <ul class="list-unstyled">
                             <li><a href="#" class="py-2 d-block " style=" color: #d1002c ;">{{t_lis[52]}} -<a
-                                        href=" https://github.com/Aaditya1978">https://github.com/Aaditya1978</a></a>
+                                        href=" https://github.com/Aaditya1978" target="_blank">https://github.com/Aaditya1978</a></a>
                             </li>
                             <li><a href="#" class="py-2 d-block" style=" color: #d1002c;">{{t_lis[53]}} -<a
-                                        href="  https://github.com/abhaydhiman"> https://github.com/abhaydhiman</a></a></li>
+                                        href="  https://github.com/abhaydhiman" target="_blank"> https://github.com/abhaydhiman</a></a></li>
                             <li><a href="#" class="py-2 d-block" style=" color: #d1002c;">{{t_lis[54]}} -<a
-                                        href="https://github.com/Ayush-Malik ">https://github.com/Ayush-Malik</a></a></li>
+                                        href="https://github.com/Ayush-Malik " target="_blank">https://github.com/Ayush-Malik</a></a></li>
                             <li><a href="#" class="py-2 d-block" style=" color: #d1002c;">{{t_lis[55]}} - <a
-                                        href="https://github.com/akshita-sharma8609 ">https://github.com/akshita-sharma8609</a></a>
+                                        href="https://github.com/akshita-sharma8609 " target="_blank">https://github.com/akshita-sharma8609</a></a>
                             </li>
                         </ul>
                     </div>
