modified background images

--- a/templates/wheather.html
+++ b/templates/wheather.html
@@ -73,7 +73,7 @@
         {% elif (cond == 'mor' or cond == 'aft' ) and code[0] >= 600 and code[0] <= 622 %}
             style="background-image:url(../static/images/snowy.png);">
         {% elif (cond == 'mor' or cond == 'aft' ) and code[0] >= 801 and code[0] <= 804 %}
-            style="background-image:url(../static/images/cloudy.jfif);">
+            style="background-image:url(../static/images/clear_image.png);">
         {% elif cond == 'eve' and code[0] == 800 %}
             style="background-image:url(../static/images/night_image4.jpg);">
         {% elif cond == 'eve' and code[0] >= 200 and code[0] <= 232 %}
