--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,21 +6,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
-    <link rel="icon" type="image/png" href="\..\farm_app\pro_farm\static\images\icons\favicon.ico" />
+    <link rel="icon" type="image/png" href="..\static\images\icons\favicon.ico" />
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="\..\farm_app\pro_farm\static\vendor\bootstrap\css\bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="..\static\vendor\bootstrap\css\bootstrap.min.css">
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css"
-        href="\..\farm_app\pro_farm\static\fonts\font-awesome-4.7.0\css\font-awesome.min.css">
+        href="..\static\fonts\font-awesome-4.7.0\css\font-awesome.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="\..\farm_app\pro_farm\static\vendor\animate\animate.css">
+    <link rel="stylesheet" type="text/css" href="..\static\vendor\animate\animate.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="\..\farm_app\pro_farm\static\vendor\css-hamburgers\hamburgers.min.css">
+    <link rel="stylesheet" type="text/css" href="..\static\vendor\css-hamburgers\hamburgers.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="\..\farm_app\pro_farm\static\vendor\select2\select2.min.css">
+    <link rel="stylesheet" type="text/css" href="..\static\vendor\select2\select2.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="\..\farm_app\pro_farm\static\css\util.css">
-    <link rel="stylesheet" type="text/css" href="\..\farm_app\pro_farm\static\css\style.css">
+    <link rel="stylesheet" type="text/css" href="..\static\css\util.css">
+    <link rel="stylesheet" type="text/css" href="..\static\css\style.css">
     <!--===============================================================================================-->
 </head>
 
@@ -183,35 +183,35 @@
 
 
     <!--===============================================================================================-->
-    <script src="\..\farm_app\pro_farm\static\vendor\jquery\jquery-3.2.1.min.js"></script>
+    <script src="..\static\vendor\jquery\jquery-3.2.1.min.js"></script>
     <!--===============================================================================================-->
-    <script src="\..\farm_app\pro_farm\static\vendor\bootstrap\js\popper.js"></script>
-    <script src="\..\farm_app\pro_farm\static\vendor\bootstrap\js\bootstrap.min.js"></script>
+    <script src="..\static\vendor\bootstrap\js\popper.js"></script>
+    <script src="..\static\vendor\bootstrap\js\bootstrap.min.js"></script>
     <!--===============================================================================================-->
-    <script src="\..\farm_app\pro_farm\static\vendor\select2\select2.min.js"></script>
+    <script src="..\static\vendor\select2\select2.min.js"></script>
     <!--===============================================================================================-->
-    <script src="\..\farm_app\pro_farm\static\vendor\tilt\tilt.jquery.min.js"></script>
+    <script src="..\static\vendor\tilt\tilt.jquery.min.js"></script>
     <script>
         $('.js-tilt').tilt({
             scale: 1.1
         })
     </script>
     <!--===============================================================================================-->
-    <script src="\..\farm_app\pro_farm\static\js\jquery.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery-migrate-3.0.1.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\popper.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\bootstrap.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery.easing.1.3.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery.waypoints.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery.stellar.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\owl.carousel.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery.magnific-popup.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery.animateNumber.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\scrollax.min.js"></script>
+    <script src="..\static\js\jquery.min.js"></script>
+    <script src="..\static\js\jquery-migrate-3.0.1.min.js"></script>
+    <script src="..\static\js\popper.min.js"></script>
+    <script src="..\static\js\bootstrap.min.js"></script>
+    <script src="..\static\js\jquery.easing.1.3.js"></script>
+    <script src="..\static\js\jquery.waypoints.min.js"></script>
+    <script src="..\static\js\jquery.stellar.min.js"></script>
+    <script src="..\static\js\owl.carousel.min.js"></script>
+    <script src="..\static\js\jquery.magnific-popup.min.js"></script>
+    <script src="..\static\js\jquery.animateNumber.min.js"></script>
+    <script src="..\static\js\scrollax.min.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="\..\farm_app\pro_farm\static\js\google-map.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\main.js"></script>
+    <script src="..\static\js\google-map.js"></script>
+    <script src="..\static\js\main.js"></script>
 
 </body>
 
